--- a/App/Views/layout.phtml
+++ b/App/Views/layout.phtml
@@ -12,7 +12,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <title>Twiiter</title>
+    <title>Twitter</title>
   </head>
   <body>
 
