--- a/App/Views/index/index.phtml
+++ b/App/Views/index/index.phtml
@@ -21,18 +21,25 @@
     </div>
 
     <div class="col-md-6 pt-4 pl-5 pr-5">
-		<form>
+		<form action="/autenticar" method="POST">
 			<div class="row">
 				<div class="col">
-					<input type="text" class="form-control" placeholder="E-mail">
+					<input name="email" type="text" class="form-control" placeholder="E-mail">
 				</div>
 				<div class="col">
-					<input type="text" class="form-control" placeholder="Senha">
+					<input name="senha" type="text" class="form-control" placeholder="Senha">
 				</div>
 				<div class="col-auto">
 					<button type="submit" class="btn btn-primary mb-2">Entrar</button>
 				</div>
 			</div>
+			<?php if($this->view->login == 'erro') { ?>
+				<div class="row">
+					<div class="col">
+						<span class="text text-danger">*Email e ou senha inválido(s)</span>
+					</div>
+				</div>
+			<?php } ?>
 		</form>
 
 		<div class="row pt-5 pl-5 pr-5">
